--- a/index.html
+++ b/index.html
@@ -15,28 +15,35 @@
           >
             <div>
               <div class="flex justify-between items-center">
-                <div class="text-6xl text-rose-500">~</div>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  class="h-12 w-12"
-                >
-                  <path
-                    d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
-                  />
-                  <path d="M9 18c-4.51 2-5-2-7-2" />
-                </svg>
+                <div class="text-6xl text-rose-500">
+                  <a href="aviflombaum.github.io/tailwind-github-pages">~</a>
+                </div>
+                <a href="https://github.com/aviflombaum/tailwind-github-pages"
+                  ><svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="h-12 w-12"
+                  >
+                    <path
+                      d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
+                    />
+                    <path d="M9 18c-4.51 2-5-2-7-2" />
+                  </svg>
+                </a>
               </div>
               <div class="mt-20">
                 <div>
-                  <a href="#" class="inline-flex space-x-4">
+                  <a
+                    href="https://github.com/aviflombaum/tailwind-github-pages"
+                    class="inline-flex space-x-4"
+                  >
                     <span
                       class="rounded bg-rose-50 px-2.5 py-1 text-sm font-semibold text-rose-500"
                       >What's new</span
@@ -74,11 +81,17 @@
                 </div>
                 <div class="mt-6 space-y-6 text-gray-500">
                   <p class="text-lg">
-                    Simply run <code>npm run start</code> locally to develop.
+                    Simply run
+                    <code class="bg-gray-300 p-1 text-gray-800"
+                      >npm run start</code
+                    >
+                    locally to develop.
                   </p>
                   <p class="text-base leading-7">
                     When you're ready to deploy, just run
-                    <code>npm run deploy</code>
+                    <code class="bg-gray-300 p-1 text-gray-800"
+                      >npm run deploy</code
+                    >
                   </p>
                   <p class="text-base leading-7">
                     As long as Github Pages is turned on for your repo, you now
